graph right padding for tooltip label

--- a/app/templates/Person/list-expand-row.latte
+++ b/app/templates/Person/list-expand-row.latte
@@ -60,7 +60,12 @@
 				                return " " + tooltipItem.yLabel + " bodů";
 				            }
 	                	}
-	            	}
+	            	},
+	            	layout: {
+                        padding: {
+                            right: 60
+                        }
+                    }
 			    }
 			};
         </script>
